--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <h1>the course</h1>
             <div class="video-container">
                 <div class="play">Play</div>
-                <video src="/videoo.mp4" autoplay muted loop></video>
+                <video src="/video.mp4" autoplay muted loop></video>
             </div>
         </div>
 
